--- a/src/mainwindowgl.ui
+++ b/src/mainwindowgl.ui
@@ -6,26 +6,28 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>790</width>
+    <height>602</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <widget class="Videowidget" name="openGLWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>9</y>
-      <width>781</width>
-      <height>561</height>
+      <x>0</x>
+      <y>0</y>
+      <width>791</width>
+      <height>601</height>
      </rect>
     </property>
    </widget>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
   <action name="actionlive">
    <property name="text">
     <string>实时预览</string>
